--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -694,16 +694,17 @@
   "wallet.restore.dialog.step.success.dialog.description.line3": "<strong>If your restored wallet is empty, but you were expecting it to have funds</strong>, please check that you used the correct wallet recovery phrase during the restoration process.",
   "wallet.restore.dialog.step.success.dialog.description.line4": "To participate in the Incentivized Testnet, the mainnet wallet you are restoring must have had funds at the time of the balance snapshot at 12.00 UTC, November 29, 2019. If you are sure that you used the correct wallet recovery phrase, then please check that you had funds in your mainnet wallet at this time.",
   "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox1": "I understand and accept responsibility for the security concerns of restoring a hardware wallet on a computer.",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox2": "I understand that I should delete the Balance wallet I am restoring from a hardware wallet after moving funds to a Rewards wallet.",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "Hardware wallets keep your private keys stored securely on a physical device that is immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you are exposing your hardware wallet private keys to the security risks associated with computers and software.",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "We strongly recommend that you delete the Balance wallet which is restored from your hardware wallet once you have moved any funds into a Rewards wallet.",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox2": "I understand that I should delete the Byron legacy wallet I am restoring from a hardware wallet after moving funds to a Shelley wallet.",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox3": "I understand that I am exposing all of the assets that are stored on my hardware wallet device, and not just ada, to security risks.",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "Hardware wallets store your private keys securely on a physical device so they are immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you expose your hardware wallet private keys to the security risks associated with computers and software. All of your assets held on your hardware wallet device are associated with the same wallet recovery phrase and its corresponding private key. If you hold assets other than ada on your hardware wallet device, you expose all of those assets to security risks.",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "We strongly recommend that you delete the Byron legacy wallet that was restored from your hardware wallet once you have moved funds into a Shelley wallet.",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "What kind of Daedalus wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12 words <em>(Byron legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27 words - paper wallet <em>(Byron legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Balance wallet)",
-  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Balance wallet)",
+  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Byron legacy wallet)",
+  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Byron legacy wallet)",
   "wallet.restore.dialog.step.walletKind.label.walletKind": "What kind of wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.walletKindDaedalus": "Daedalus wallet",
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "Hardware wallet",
