--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -694,16 +694,17 @@
   "wallet.restore.dialog.step.success.dialog.description.line3": "<strong>復元されたウォレットに入っているべき資金が入っていなかった場合</strong>、復元プロセスで正しいウォレット復元フレーズを使用したか確認してください。",
   "wallet.restore.dialog.step.success.dialog.description.line4": "インセンティブ付きテストネットに参加するには、日本時間2019年11月29日午後9時に実施された残高スナップショットの時点で復元対象のメインネットウォレットに資金が入っていた必要があります。確かに正しいウォレット復元フレーズを使用したという場合は、この時にメインネットウォレットに資金が入っていたかを確認してください。",
   "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox1": "ハードウェアウォレットをコンピューター上に復元するにあたり、安全性に関する責任は自分にあることを理解し、これに同意します。",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox2": "ハードウェアウォレットから復元する残高ウォレットは、資金を報酬ウォレットに移した後削除するべきであることを理解しました。",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元した残高ウォレットは、資金を報酬ウォレットに移したら直ちに削除することを強くお勧めします。",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox2": "ハードウェアウォレットから復元するByronレガシーウォレットは、資金をShelleyウォレットに移した後に削除すべきであることを理解しています。",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox3": "ADAだけでなく、ハードウェアウォレットデバイスに保有されているすべての資産がセキュリティリスクに晒されることを理解しています。",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。ハードウェアウォレットデバイスに保有されているすべての資産は、対象のウォレット復元フレーズと、これに対応する秘密鍵に関連付けられます。ハードウェアウォレットデバイスにADA以外の資産を保有している場合、それらすべての資産をセキュリティリスクに晒すことになります。",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元したByronレガシーウォレットは、資金をShelleyウォレットに移し次第削除することが強く推奨されます。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12語 <em>（Byronレガシーウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15語 <em>（Shelleyウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27語 - ペーパーウォレット <em>（Byronレガシーウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "どのタイプのハードウェアウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger Nano SまたはNano X (残高ウォレット)",
-  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12語、18語、または24語 - Trezor (残高ウォレット)",
+  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger Nano SまたはNano X (Byronレガシーウォレット)",
+  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12語、18語、または24語 - Trezor (Byronレガシーウォレット)",
   "wallet.restore.dialog.step.walletKind.label.walletKind": "どのウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.walletKindDaedalus": "Daedalusウォレット",
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "ハードウェアウォレット",
