--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10882,7 +10882,7 @@
         }
       },
       {
-        "defaultMessage": "!!!24 words - Ledger Nano S or Nano X (Balance wallet)",
+        "defaultMessage": "!!!24 words - Ledger Nano S or Nano X (Byron legacy wallet)",
         "description": "Label for the \"labelHardwareWalletKindLedger\" checkbox.",
         "end": {
           "column": 3,
@@ -10896,7 +10896,7 @@
         }
       },
       {
-        "defaultMessage": "!!!24 words - Trezor (Balance wallet)",
+        "defaultMessage": "!!!24 words - Trezor (Byron legacy wallet)",
         "description": "Label for the \"labelHardwareWalletKindTrezor\" checkbox.",
         "end": {
           "column": 3,
@@ -10910,7 +10910,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Hardware wallets keep your private keys stored securely on a physical device that is immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you are exposing your hardware wallet private keys to the security risks associated with computers and software.",
+        "defaultMessage": "!!!Hardware wallets store your private keys securely on a physical device so they are immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you expose your hardware wallet private keys to the security risks associated with computers and software. All of your assets held on your hardware wallet device are associated with the same wallet recovery phrase and its corresponding private key. If you hold assets other than ada on your hardware wallet device, you expose all of those assets to security risks.",
         "description": "Label for the \"hardwareWalletDisclaimer1\" disclaimer.",
         "end": {
           "column": 3,
@@ -10924,7 +10924,7 @@
         }
       },
       {
-        "defaultMessage": "!!!We strongly recommend that you delete the Balance wallet which is restored from your hardware wallet once you have moved any funds into a Rewards wallet.",
+        "defaultMessage": "!!!We strongly recommend that you delete the Byron legacy wallet that was restored from your hardware wallet once you have moved funds into a Shelley wallet.",
         "description": "Label for the \"hardwareWalletDisclaimer2\" disclaimer.",
         "end": {
           "column": 3,
@@ -10952,7 +10952,7 @@
         }
       },
       {
-        "defaultMessage": "!!!I understand that I should delete the Balance wallet I am restoring from a hardware wallet after moving funds to a Rewards wallet.",
+        "defaultMessage": "!!!I understand that I should delete the Byron legacy wallet I am restoring from a hardware wallet after moving funds to a Shelley wallet.",
         "description": "Label for the \"hardwareWalletCheckbox2\" disclaimer.",
         "end": {
           "column": 3,
@@ -10963,6 +10963,20 @@
         "start": {
           "column": 27,
           "line": 124
+        }
+      },
+      {
+        "defaultMessage": "!!!I understand that I am exposing all of the assets that are stored on my hardware wallet device, and not just ada, to security risks.",
+        "description": "Label for the \"hardwareWalletCheckbox2\" disclaimer.",
+        "end": {
+          "column": 3,
+          "line": 135
+        },
+        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
+        "id": "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox3",
+        "start": {
+          "column": 27,
+          "line": 130
         }
       }
     ],
