Enable hardware restoration stn copywrite

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -696,8 +696,9 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox1": "ハードウェアウォレットをコンピューター上に復元するにあたり、安全性に関する責任は自分にあることを理解し、これに同意します。",
   "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox2": "ハードウェアウォレットから復元するByronレガシーウォレットは、資金をShelleyウォレットに移した後に削除すべきであることを理解しています。",
   "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox3": "ADAだけでなく、ハードウェアウォレットデバイスに保有されているすべての資産がセキュリティリスクに晒されることを理解しています。",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。ハードウェアウォレットデバイスに保有されているすべての資産は、対象のウォレット復元フレーズと、これに対応する秘密鍵に関連付けられます。ハードウェアウォレットデバイスにADA以外の資産を保有している場合、それらすべての資産をセキュリティリスクに晒すことになります。",
-  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元したByronレガシーウォレットは、資金をShelleyウォレットに移し次第削除することが強く推奨されます。",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。ハードウェアウォレットデバイスに保有されているすべての資産は、対象のウォレット復元フレーズと、これに対応する秘密鍵に関連付けられます。",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットデバイスにADA以外の資産を保有している場合、それらすべての資産をセキュリティリスクに晒すことになります。",
+  "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer3": "ハードウェアウォレットから復元したByronレガシーウォレットは、資金をShelleyウォレットに移し次第削除することが強く推奨されます。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12語 <em>（Byronレガシーウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15語 <em>（Shelleyウォレット）</em>",
