--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -460,10 +460,10 @@
   "staking.stakePools.tooltip.delegateButton": "Delegate to this pool",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "Experimental feature, data may be inaccurate.",
   "staking.stakePools.tooltip.pledge": "Pledge:",
-  "staking.stakePools.tooltip.producedBlocks": "Produced blocks:",
+  "staking.stakePools.tooltip.producedBlocks": "Blocks (current epoch):",
   "staking.stakePools.tooltip.profitMargin": "Pool margin:",
   "staking.stakePools.tooltip.ranking": "Rank:",
-  "staking.stakePools.tooltip.relativeStake": "Relative stake:",
+  "staking.stakePools.tooltip.relativeStake": "Controlled stake:",
   "staking.stakePools.tooltip.retirement": "Retirement in {retirementFromNow}",
   "staking.stakePools.tooltip.saturation": "Saturation:",
   "static.about.buildInfo": "{platform} build <strong>{build}</strong>, {apiName} Node <strong>{nodeVersion}</strong>, {apiName} Wallet <strong>{apiVersion}</strong>",
@@ -490,7 +490,7 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "Learn more",
-  "static.splash.network.stnDescription": "<p>This version of Daedalus has been created to be used specifically with the third iteration of the Shelley testnet network.</p><p> You can use it to experience the delegation mechanics and understand how the rewards work, using testnet ada before this becomes available on the Cardano mainnet later this summer.</p><p> We have taken a snapshot of ada balances on the Cardano mainnet on the 20th of July at 12 am UTC and made those balances available as test ada on the Cardano testnet. If you held ada on the Cardano mainnet at the time of the snapshot, you can restore your mainnet Byron wallets on the Shelley testnet using this version of Daedalus.</p><p><b> This version of Daedalus does not support spending from Byron wallets before the Shelley upgrade. This feature will be enabled as soon as the upgrade to Shelley is completed.</b></p><p> If you participated in the Incentivized Testnet program, you can use the new version of Daedalus to check your Incentivized Testnet rewards. To do this, restore your wallet using the 15-word recovery phrase for your Daedalus Rewards or Yoroi wallet. The Incentivized Testnet rewards will be available on the testnet one epoch after the Shelley upgrade.</p>",
+  "static.splash.network.stnDescription": "<p>This version of Daedalus has been created to be used specifically with the Shelley testnet network.</p><p> You can use it to experience the delegation mechanics and understand how the rewards work, using testnet ada before this becomes available on the Cardano mainnet later this summer.</p><p> We have taken a snapshot of ada balances on the Cardano mainnet on the 20th of July at 12 am UTC and made those balances available as test ada on the Cardano testnet. If you held ada on the Cardano mainnet at the time of the snapshot, you can restore your mainnet Byron wallets on the Shelley testnet using this version of Daedalus.</p><p><b> This version of Daedalus does not support spending from Byron wallets before the Shelley upgrade. This feature will be enabled as soon as the upgrade to Shelley is completed.</b></p><p> If you participated in the Incentivized Testnet program, you can use the new version of Daedalus to check your Incentivized Testnet rewards. To do this, restore your wallet using the 15-word recovery phrase for your Daedalus Rewards or Yoroi wallet. The Incentivized Testnet rewards will be available on the testnet one epoch after the Shelley upgrade.</p>",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
   "static.splash.network.stnVersionName": "SHELLEY TESTNET",
   "static.splash.network.title": "Daedalus",
