--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -460,10 +460,10 @@
   "staking.stakePools.tooltip.delegateButton": "このプールに委任する",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "実験的機能データは不正確な場合があります",
   "staking.stakePools.tooltip.pledge": "出資：",
-  "staking.stakePools.tooltip.producedBlocks": "生成ブロック数：",
+  "staking.stakePools.tooltip.producedBlocks": "ブロック数（現行エポック）：",
   "staking.stakePools.tooltip.profitMargin": "プールマージン：",
   "staking.stakePools.tooltip.ranking": "ランク：",
-  "staking.stakePools.tooltip.relativeStake": "相対ステーク：",
+  "staking.stakePools.tooltip.relativeStake": "管理下のステーク：",
   "staking.stakePools.tooltip.retirement": "あと{retirementFromNow}で終了",
   "staking.stakePools.tooltip.saturation": "飽和：",
   "static.about.buildInfo": "{platform} ビルド <strong>{build}</strong>, {apiName} Node <strong>{nodeVersion}</strong>, {apiName} Wallet <strong>{apiVersion}</strong>",
@@ -490,7 +490,7 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "もっと知る",
-  "static.splash.network.stnDescription": "<p>このDaedalusバージョンは、Shelleyテストネットネットワーク第3イテレーションで使用するための専用バージョンです。</p><p> 本バージョンにより、今夏委任機能がCardanoメインネットで使用可能となる前に、テストネットADAを使用してそのメカニズムを体験し、報酬の仕組みを理解することができます。</p><p> 日本時間7月20日午前9時にCardanoメインネットのADA残高スナップショットが実施され、この残高がCardanoテストネットのテストADAとして利用可能となりました。このスナップショットの時点でCardanoメインネットにADAを保有していた場合、このDaedalusバージョンを使用してメインネットのByronウォレットをShelleyテストネットで復元することができます。</p><p><b> Shelleyアップグレードが完了するまで、このDaedalusバージョンのByronウォレット送金機能はサポートされません。送金機能はShelleyへのアップグレードが完了次第有効となります。</b></p><p> インセンティブ付きテストネットプログラムに参加していた場合は、Daedalus最新バージョンでインセンティブ付きテストネットの報酬を確認することができます。その際は、15語のウォレット復元フレーズを使用して、Daedalus RewardsまたはYoroiのウォレットを復元してください。インセンティブ付きテストネットの報酬は、テストネットで、Shelleyアップグレードが完了してから1エポック後に復元できるようになります。</p>",
+  "static.splash.network.stnDescription": "<p>このDaedalusバージョンは、Shelleyテストネットネットワークで使用するための専用バージョンです。</p><p> 本バージョンにより、今夏委任機能がCardanoメインネットで使用可能となる前に、テストネットADAを使用してそのメカニズムを体験し、報酬の仕組みを理解することができます。</p><p> 日本時間7月20日午前9時にCardanoメインネットのADA残高スナップショットが実施され、この残高がCardanoテストネットのテストADAとして利用可能となりました。このスナップショットの時点でCardanoメインネットにADAを保有していた場合、このDaedalusバージョンを使用してメインネットのByronウォレットをShelleyテストネットで復元することができます。</p><p><b> Shelleyアップグレードが完了するまで、このDaedalusバージョンのByronウォレット送金機能はサポートされません。送金機能はShelleyへのアップグレードが完了次第有効となります。</b></p><p> インセンティブ付きテストネットプログラムに参加していた場合は、Daedalus最新バージョンでインセンティブ付きテストネットの報酬を確認することができます。その際は、15語のウォレット復元フレーズを使用して、Daedalus RewardsまたはYoroiのウォレットを復元してください。インセンティブ付きテストネットの報酬は、テストネットで、Shelleyアップグレードが完了してから1エポック後に復元できるようになります。</p>",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
   "static.splash.network.stnVersionName": "Shelleyテストネット",
   "static.splash.network.title": "Daedalus",
