--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -704,7 +704,7 @@
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27 words - paper wallet <em>(Byron legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Byron legacy wallet)",
+  "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger (Byron legacy wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Byron legacy wallet)",
   "wallet.restore.dialog.step.walletKind.label.walletKind": "What kind of wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.walletKindDaedalus": "Daedalus wallet",
