--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10882,7 +10882,7 @@
         }
       },
       {
-        "defaultMessage": "!!!24 words - Ledger Nano S or Nano X (Byron legacy wallet)",
+        "defaultMessage": "!!!24 words - Ledger (Byron legacy wallet)",
         "description": "Label for the \"labelHardwareWalletKindLedger\" checkbox.",
         "end": {
           "column": 3,
@@ -10910,7 +10910,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Hardware wallets store your private keys securely on a physical device so they are immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you expose your hardware wallet private keys to the security risks associated with computers and software. All of your assets held on your hardware wallet device are associated with the same wallet recovery phrase and its corresponding private key. If you hold assets other than ada on your hardware wallet device, you expose all of those assets to security risks.",
+        "defaultMessage": "!!!Hardware wallets store your private keys securely on a physical device so they are immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you expose your hardware wallet private keys to the security risks associated with computers and software.",
         "description": "Label for the \"hardwareWalletDisclaimer1\" disclaimer.",
         "end": {
           "column": 3,
@@ -10924,7 +10924,7 @@
         }
       },
       {
-        "defaultMessage": "!!!We strongly recommend that you delete the Byron legacy wallet that was restored from your hardware wallet once you have moved funds into a Shelley wallet.",
+        "defaultMessage": "!!!All of your assets held on your hardware wallet device are associated with the same wallet recovery phrase and its corresponding private key. If you hold assets other than ada on your hardware wallet device, you expose all of those assets to security risks.",
         "description": "Label for the \"hardwareWalletDisclaimer2\" disclaimer.",
         "end": {
           "column": 3,
@@ -10938,17 +10938,31 @@
         }
       },
       {
-        "defaultMessage": "!!!I understand and accept responsibility for the security concerns of restoring a hardware wallet on a computer.",
-        "description": "Label for the \"hardwareWalletCheckbox1\" disclaimer.",
+        "defaultMessage": "!!!We strongly recommend that you delete the Byron legacy wallet that was restored from your hardware wallet once you have moved funds into a Shelley wallet.",
+        "description": "Label for the \"hardwareWalletDisclaimer3\" disclaimer.",
         "end": {
           "column": 3,
           "line": 123
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
+        "id": "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer3",
+        "start": {
+          "column": 29,
+          "line": 118
+        }
+      },
+      {
+        "defaultMessage": "!!!I understand and accept responsibility for the security concerns of restoring a hardware wallet on a computer.",
+        "description": "Label for the \"hardwareWalletCheckbox1\" disclaimer.",
+        "end": {
+          "column": 3,
+          "line": 129
+        },
+        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox1",
         "start": {
           "column": 27,
-          "line": 118
+          "line": 124
         }
       },
       {
@@ -10956,13 +10970,13 @@
         "description": "Label for the \"hardwareWalletCheckbox2\" disclaimer.",
         "end": {
           "column": 3,
-          "line": 129
+          "line": 135
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox2",
         "start": {
           "column": 27,
-          "line": 124
+          "line": 130
         }
       },
       {
@@ -10970,13 +10984,13 @@
         "description": "Label for the \"hardwareWalletCheckbox2\" disclaimer.",
         "end": {
           "column": 3,
-          "line": 135
+          "line": 141
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox3",
         "start": {
           "column": 27,
-          "line": 130
+          "line": 136
         }
       }
     ],
