--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -701,7 +701,8 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer3": "We strongly recommend that you delete the Byron legacy wallet that was restored from your hardware wallet once you have moved funds into a Shelley wallet.",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "What kind of Daedalus wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15 words <em>(Incentivized Testnet Rewards wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind24WordShelley": "24 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27 words - paper wallet <em>(Byron legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger (Byron legacy wallet)",
@@ -712,7 +713,7 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroi wallet",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "What kind of Yoroi wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "15 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15 words <em>(Incentivized Testnet wallet)</em>",
   "wallet.restore.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalus paper wallet",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalus wallet",
