--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -701,7 +701,8 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer3": "ハードウェアウォレットから復元したByronレガシーウォレットは、資金をShelleyウォレットに移し次第削除することが強く推奨されます。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12語 <em>（Byronレガシーウォレット）</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15語 <em>（Shelleyウォレット）</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15語 <em>（ITN用Rewardsウォレット）</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind24WordShelley": "24語 <em>（Shelleyウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27語 - ペーパーウォレット <em>（Byronレガシーウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "どのタイプのハードウェアウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger (Byronレガシーウォレット)",
@@ -712,7 +713,7 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroiウォレット",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "どのタイプのYoroiウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "15語 <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15語 <em>(Shelleyウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15語 <em>(ITN用ウォレット)</em>",
   "wallet.restore.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalusペーパーウォレット",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalusウォレット",
