--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -14,12 +14,18 @@
   "api.errors.WalletAlreadyRestoredError": "Wallet you are trying to restore already exists.",
   "api.errors.WalletFileImportError": "Wallet could not be imported, please make sure you are providing a correct file.",
   "api.errors.invalidAddress": "Please enter a valid address.",
-  "automaticUpdate.accept.button.label": "Restart Daedalus and Update",
-  "automaticUpdate.description1": "You are currently running Daedalus <b>{currentAppVersion}</b> and <b>{nextUpdateVersion}</b> is available.",
-  "automaticUpdate.description2": "Would you like to install the update? If choose to postpone, the update will be installed automatically on the next Daedalus launch.",
-  "automaticUpdate.newerVersion.label": "a newer version",
-  "automaticUpdate.postpone.button.label": "Postpone until Daedalus restart",
-  "automaticUpdate.title": "Software update is available",
+  "appUpdate.manualUpdateOverlay.button.label": "Follow instructions and manually update",
+  "appUpdate.manualUpdateOverlay.button.url": "https://iohk.zendesk.com/hc/en-us/articles/360023850634",
+  "appUpdate.manualUpdateOverlay.description1": "You are experiencing network connection issues, and you are not running the latest Daedalus version. Automatic updates are unavailable while Daedalus is not connected to Cardano network.",
+  "appUpdate.manualUpdateOverlay.description2": "You are currently running <b>{currentAppVersion}</b> version of Daedalus, and <b>{availableAppVersion}</b> version is available. Please manually update to that version since it may resolve your connecting issues.",
+  "appUpdate.manualUpdateOverlay.title": "Software update is available",
+  "appUpdate.overlay.buttonLabel": "Quit Daedalus and start the installation",
+  "appUpdate.overlay.checkboxLabel": "I understand that I need to complete the installation before starting Daedalus.",
+  "appUpdate.overlay.downloadProgressData": "({totalDownloaded} of {totalDownloadSize} downloaded)",
+  "appUpdate.overlay.downloadProgressLabel": "Download in progress",
+  "appUpdate.overlay.downloadTimeLeft": "{downloadTimeLeft} left",
+  "appUpdate.overlay.subtitle": "You are currently running Daedalus version <b>{currentAppVersion}</b>.<br />Daedalus version <b>{availableAppVersion}</b> is now available to download.",
+  "appUpdate.overlay.title": "Software update available!",
   "backToTopButton.label": "Back to top",
   "cancel.transaction.confirmation.dialog.button.backLabel": "No, leave transaction pending",
   "cancel.transaction.confirmation.dialog.button.confirmLabel": "Yes, cancel transaction",
@@ -172,21 +178,10 @@
   "loading.screen.unrecoverableCardanoMessage": "Unable to start Cardano node. Please submit a support request.",
   "loading.screen.updatedCardanoMessage": "Cardano node updated",
   "loading.screen.updatingCardanoMessage": "Updating Cardano node",
-  "manualUpdate.button.label": "Follow instructions and manually update",
-  "manualUpdate.button.url": "https://iohk.zendesk.com/hc/en-us/articles/360023850634",
-  "manualUpdate.description1": "You are experiencing network connection issues, and you are not running the latest Daedalus version. Automatic updates are unavailable while Daedalus is not connected to Cardano network.",
-  "manualUpdate.description2": "You are currently running <b>{currentAppVersion}</b> version of Daedalus, and <b>{availableAppVersion}</b> version is available. Please manually update to that version since it may resolve your connecting issues.",
-  "manualUpdate.title": "Software update is available",
+  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "Newsfeed is empty",
   "news.newsfeed.noFetch": "Trying to fetch the newsfeed...",
   "news.newsfeed.title": "Newsfeed",
-  "news.updateOverlay.title": "Software update available!",
-  "news.updateOverlay.subtitle": "You are currently running Daedalus version <b>{currentVersion}</b>.<br />Daedalus version <b>{availableVersion}</b> is now available to download.",
-  "news.updateOverlay.checkboxLabel": "I understand that I need to complete the installation before starting Daedalus.",
-  "news.updateOverlay.buttonLabel": "Quit Daedalus and start the installation",
-  "news.updateOverlay.downloadProgressLabel": "Download in progress",
-  "news.updateOverlay.downloadProgressData": "({totalDownloaded} of {totalDownloadSize} downloaded)",
-  "news.updateOverlay.downloadTimeLeft": "{downloadTimeLeft} left",
   "noDiskSpace.error.overlayContent": "<b>Daedalus requires at least {diskSpaceRequired} of hard drive space to operate. Your computer is missing {diskSpaceMissing} of available space. Please delete some files to increase available hard drive space to continue using Daedalus. </b><br /><br />It is recommended to have at least 15% of hard drive space available ({diskSpaceRecommended} in your case) for normal and stable operation of the operating system and installed programs. We strongly recommend that you free up at least that amount of space from your hard drive.",
   "noDiskSpace.error.overlayTitle": "Daedalus requires more hard drive space",
   "notification.copyAddress": "Address: <strong>{address}</strong> copied to clipboard",
