--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -14,12 +14,18 @@
   "api.errors.WalletAlreadyRestoredError": "復元しようとしているウォレットは既に存在します。",
   "api.errors.WalletFileImportError": "ウォレットをインポートできませんでした。有効なファイルを指定していることを確認してください。",
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
-  "automaticUpdate.accept.button.label": "Daedalusを再起動して更新する",
-  "automaticUpdate.description1": "現在実行中のDaedalus <b>{currentAppVersion}</b>は<b>{nextUpdateVersion}</b>に更新できます。",
-  "automaticUpdate.description2": "今すぐ最新版をインストールしますか。更新を保留すると、Daedalusを次回起動する時に自動的にインストールされます。",
-  "automaticUpdate.newerVersion.label": "最新バージョン",
-  "automaticUpdate.postpone.button.label": "Daedalusの次回起動時まで保留する",
-  "automaticUpdate.title": "ソフトウェアが更新できます",
+  "appUpdate.manualUpdateOverlay.button.label": "指示に従って手動で更新してください",
+  "appUpdate.manualUpdateOverlay.button.url": "https://iohk.zendesk.com/hc/ja/articles/360023850634",
+  "appUpdate.manualUpdateOverlay.description1": "ネットワークへの接続に不具合があり、Daedalusウォレットの最新バージョンが実行されていません。DaedalusがCardanoネットワークに接続されていない間、自動更新は実行できません。",
+  "appUpdate.manualUpdateOverlay.description2": "ご使用のDaedalusはバージョン<b>{currentAppVersion}</b>です。現在<b>{availableAppVersion}</b>をご利用いただけます。手動で最新版に更新すると、接続の不具合を解消できる場合があります。",
+  "appUpdate.manualUpdateOverlay.title": "ソフトウェアが更新できます",
+  "appUpdate.overlay.buttonLabel": "Daedalusを終了してインストールを開始する",
+  "appUpdate.overlay.checkboxLabel": "Daedalusを起動する前に、インストールを完了する必要があることを理解しました。",
+  "appUpdate.overlay.downloadProgressData": "（{totalDownloaded}/{totalDownloadSize}をダウンロード済み）",
+  "appUpdate.overlay.downloadProgressLabel": "ダウンロードしています",
+  "appUpdate.overlay.downloadTimeLeft": "残り{downloadTimeLeft}",
+  "appUpdate.overlay.subtitle": "このDaedalusはバージョン<b>{currentAppVersion}</b>です。<br />現在Daedalus <b>{availableAppVersion}</b>がダウンロード可能です",
+  "appUpdate.overlay.title": "ソフトウェアが更新できます!",
   "backToTopButton.label": "トップに戻る",
   "cancel.transaction.confirmation.dialog.button.backLabel": "いいえ、トランザクションを保留にしておきます",
   "cancel.transaction.confirmation.dialog.button.confirmLabel": "はい、トランザクションをキャンセルします",
@@ -172,21 +178,10 @@
   "loading.screen.unrecoverableCardanoMessage": "Cardanoノードを起動できません。サポートリクエストを送信してください。",
   "loading.screen.updatedCardanoMessage": "Cardanoノードが更新されました",
   "loading.screen.updatingCardanoMessage": "Cardanoノードを更新しています",
-  "manualUpdate.button.label": "指示に従って手動で更新してください",
-  "manualUpdate.button.url": "https://iohk.zendesk.com/hc/ja/articles/360023850634",
-  "manualUpdate.description1": "ネットワークへの接続に不具合があり、Daedalusウォレットの最新バージョンが実行されていません。DaedalusがCardanoネットワークに接続されていない間、自動更新は実行できません。",
-  "manualUpdate.description2": "ご使用のDaedalusはバージョン<b>{currentAppVersion}</b>です。現在<b>{availableAppVersion}</b>をご利用いただけます。手動で最新版に更新すると、接続の不具合を解消できる場合があります。",
-  "manualUpdate.title": "ソフトウェアが更新できます",
+  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "ニュースフィードは空です",
   "news.newsfeed.noFetch": "ニュースフィードを読み込んでいます…",
   "news.newsfeed.title": "ニュースフィード",
-  "news.updateOverlay.title": "ソフトウェアが更新できます!",
-  "news.updateOverlay.subtitle": "このDaedalusはバージョン<b>{currentVersion}</b>です。<br />現在Daedalus <b>{availableVersion}</b>がダウンロード可能です",
-  "news.updateOverlay.checkboxLabel": "Daedalusを起動する前に、インストールを完了する必要があることを理解しました。",
-  "news.updateOverlay.buttonLabel": "Daedalusを終了してインストールを開始する",
-  "news.updateOverlay.downloadProgressLabel": "ダウンロードしています",
-  "news.updateOverlay.downloadProgressData": "（{totalDownloaded}/{totalDownloadSize}をダウンロード済み）",
-  "news.updateOverlay.downloadTimeLeft": "残り{downloadTimeLeft}",
   "noDiskSpace.error.overlayContent": "<b>Daedalusを動作させるには、ハードディスクに{diskSpaceRequired}以上の空き容量が必要です。ご使用のコンピューターには空き容量が{diskSpaceMissing}不足しています。Daedalusのご利用を続けるためには、ファイルをいくつか削除して空き容量を増やしてください。</b><br /><br />オペレーティングシステムとインストール済みプログラムを正常かつ安定した状態で動作させるには、ハードディスクに少なくとも15%（ご使用のコンピューターの場合は{diskSpaceRecommended}）の空き容量が必要です。ハードディスクにこれ以上の空き容量を確保してください。",
   "noDiskSpace.error.overlayTitle": "ハードディスクの空き容量が不足しているためDaedalusを作動できません",
   "notification.copyAddress": "アドレス：<strong>{address}</strong>をクリップボードにコピーしました",
